--- a/blog/templates/blog_list.html
+++ b/blog/templates/blog_list.html
@@ -22,7 +22,7 @@
       <a href="/blog/{{post.slug}}/"><h3>{{post.title}}</h3></a>
       <h3 class="blog-post-card-date"><small>{{post.created|date:"d M Y"}}</small></h3>
       <div class="blog-post-content">
-        {{post.content|striptags|truncatewords:30 }}
+        {{post.content|striptags|safe|truncatewords:30 }}
       </div><br>
       <a href="/blog/{{post.slug}}/">Read more</a>
     </div>
