--- a/data_entry/templates/publishable_change_form.html
+++ b/data_entry/templates/publishable_change_form.html
@@ -1,16 +1,9 @@
 {% extends "admin/change_form.html" %}
 {% load i18n admin_urls %}
-{% block object-tools-items %}
-
-  {{ block.super }}
-
-  <li>
-    <a href="publish/" class="addlink">Publish</a>
-  </li>
-
-{% endblock %}
 {% block submit_buttons_bottom %}
 <div class="submit-row">
+  <input type="submit" value="Publish"  name="_publish"
+         style="background-color:#5bc878;float: right;margin-left:8px" />
   <input type="submit" value="{% trans 'Save' %}" class="default" name="_save" />
   {% if show_delete_link %}
     {% url opts|admin_urlname:'delete' original.pk|admin_urlquote as delete_url %}
@@ -19,9 +12,5 @@
   {% if show_save_as_new %}<input type="submit" value="{% trans 'Save as new' %}" name="_saveasnew" />{% endif %}
   <input type="submit" value="{% trans 'Save and add another' %}" name="_addanother" />
   <input type="submit" value="{% trans 'Save and continue editing' %}" name="_continue" />
-
-  <input type="submit" value="Publish"  name="_publish"
-         style="background-color: #5bc878;" />
-
 </div>
 {% endblock %}
